# posi

./: .gitignore  .justfile  Cargo.toml  LICENSE  package.json  pnpm-lock.yaml  tailwind.config.js
src/: main.rs
templates/: base.html  hello.html  power.html  savings-form.html
